# Mazur_lab

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  znaki1.txt
